--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,28 @@
 body {
-  background-image: url("https://wallpaperaccess.com/full/2055140.jpg");
-  background-size: auto;
-  background-attachment: fixed;
-  background-position: center;
-  font-family: Arial, Helvetica, sans-serif;
+    background-image: url("https://wallpaperaccess.com/full/2055140.jpg");
+    background-size: auto;
+    background-attachment: fixed;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  width: 100vw;
-  height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100vw;
+    height: 100vh;
 }
 
 .car {
-  background-color: white;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+
+.btn {
+    margin: 4px;
 }
